--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@ coverage
 dist
 node_modules
 res
-.env
-tmp/*
-!tmp/.gitkeep
+
+tmp/**
+!tmp/avatar
 !tmp/avatar/.gitkeep
+!tmp/cars
 !tmp/cars/.gitkeep
+
+.env
+
 ormconfig.json
