--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "dev": "ts-node-dev -r tsconfig-paths/register --poll --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "docker": "docker exec -it rentx sh",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
@@ -27,6 +27,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.2",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
@@ -50,6 +52,7 @@
     "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
+    "@types/redis": "^2.8.29",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
